Изменение контракта
