# routes/contract.js
@@ -63,6 +63,66 @@ router.get('/get_id', function(req, res, next) {
         });
 });
 
+/*GET Вывод информации о контракте по идентификатору контракта*/
+router.get('/get', function(req, res, next) {
+    var id = req.get('Id');
+
+    connection.query('SELECT id_contract, id_entry_contract, name, employee, dateStart, dateEnd, contract.price, status ' +
+        'FROM contract, work, entry WHERE id_contract = ? AND contract.id_entry_contract = entry.id_entry AND contract.id_work_contract = work.id_work' +
+        ' ORDER BY id_contract desc', id, function (error, results, fields) {
+        if(error){
+            console.log('error 1');
+            res.send(JSON.stringify({"status": 500, "error": error, "response": null}));
+            //If there is error, we send the error in the error section with 500 status
+        } else {
+            for (let i in results) {
+                results[i].dateStart = results[i].dateStart.toLocaleString();
+                if(results[i].dateEnd !== null) {
+                    results[i].dateEnd = results[i].dateEnd.toLocaleString();
+                }
+            }
+            res.end(JSON.stringify({"status": 200, "error": null, "response": results}));
+        }
+    });
+
+});
+
+/* PUT Изменение данных контракта */
+router.put('/change', function(req, res, next) {
+    var work = decodeURI(req.get('Work'));
+    var id = req.get("Id");
+
+    var id_entry_contract = req.body.id_entry_contract;
+    var id_work_contract = req.body.id_work_contract;
+    var employee = req.body.employee;
+    var dateStart = req.body.dateStart;
+    var dateEnd = req.body.dateEnd;
+    var price = req.body.price;
+    var status = req.body.status;
+
+    connection.query('SELECT id_work FROM work WHERE name =  ?', work, function(error, results, fields) {
+        if (error) {
+            return res.send(JSON.stringify({"status": 500, "error": error, "response": null}));
+        } else {
+            id_work_contract = results[0].id_work;
+            connection.query('UPDATE autoservice.contract SET id_entry_contract = ?, id_work_contract = ?, employee = ?,' +
+                ' dateStart = ?, dateEnd = ?, price = ?, status = ? WHERE id_contract = ?',
+                [id_entry_contract, id_work_contract, employee, dateStart, dateEnd, price, status, id], function(error, results, fields) {
+                    if (error) {
+                        console.log('error');
+                        return res.send(JSON.stringify({"status": 500, "error": error, "response": null}));
+                    } else {
+                        console.log('success');
+                        res.send(JSON.stringify({"status": 200, "error": null, "response": results}));
+                    }
+                })
+        }
+    });
+
+
+
+});
+
 /* POST Добавление контракта*/
 router.post('/add', function(req, res, next) {
     var work = decodeURI(req.get('Work'));
