# swagger.json
@@ -227,6 +227,14 @@
         "summary": "Вывод контрактов"
       }
     },
+    "/contract/get": {
+      "get": {
+        "tags": [
+          "API"
+        ],
+        "summary": "Вывод информации о контракте по идентификатору контракта"
+      }
+    },
     "/contract/get_id": {
       "get": {
         "tags": [
